# proofid-node

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  docker-compose.yml  midgard-chain-spec-plain.json  midgardCustomSpecRaw.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release-rc.yml  release.yml
.maintain/: runtime-weight-template.hbs  weight-template.hbs
.maintain/reset-spec/: README.md  app.py  peregrine_dev_kilt.py  peregrine_dev_relay.py  peregrine_kilt.py  peregrine_relay.py  peregrine_stg_kilt.py  peregrine_stg_relay.py
dev-specs/kilt-parachain/: peregrine-dev-kilt.json  peregrine-dev-relay.json  peregrine-kilt-dev-fast-gov.json  peregrine-kilt-fast-gov.json  peregrine-kilt.json  peregrine-relay.json  peregrine-stg-kilt.json  peregrine-stg-relay.json
dev-specs/mashnet-node/: devnet.json  staging.json
dev-specs/proofid-node/: staging.json
docs/: kilt-pallets-description.md  kilt-substrate.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
nodes/parachain/: Cargo.toml  build.rs
nodes/parachain/res/: midgard-chain-spec-plain.json  midgard-para-2000-genesis  midgard-para-2000-wasm  midgardCustomSpecRaw.json  pidnet.json  spiritnet.json
nodes/parachain/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
nodes/parachain/src/chain_spec/: midgard.rs  peregrine.rs  spiritnet.rs
nodes/standalone/: Cargo.toml  build.rs
nodes/standalone/res/: testnet.json
nodes/standalone/res/genesis-testing/: genesis_accounts.json
nodes/standalone/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/attestation/: Cargo.toml
pallets/attestation/src/: attestations.rs  benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/crowdloan/: Cargo.toml
pallets/crowdloan/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  storage.rs  tests.rs
pallets/ctype/: Cargo.toml
pallets/ctype/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/delegation/: Cargo.toml
pallets/delegation/src/: benchmarking.rs  default_weights.rs  delegation_hierarchy.rs  deprecated.rs  lib.rs  migrations.rs  mock.rs  tests.rs
pallets/did/: Cargo.toml
pallets/did/src/: benchmarking.rs  default_weights.rs  deprecated.rs  did_details.rs  errors.rs  lib.rs  migrations.rs  mock.rs  mock_utils.rs  origin.rs  service_endpoints.rs  signature.rs  tests.rs  utils.rs
pallets/did/src/deprecated/: v2.rs
pallets/did/src/migrations/: v2.rs
pallets/kilt-launch/src/: benchmarking.rs
pallets/pallet-attestation/: Cargo.toml
pallets/pallet-attestation/src/: attestations.rs  benchmarking.rs  lib.rs
pallets/pallet-crowdloan/: Cargo.toml
pallets/pallet-ctype/: Cargo.toml
pallets/pallet-delegation/: Cargo.toml
pallets/pallet-delegation/src/: benchmarking.rs  delegation_hierarchy.rs  lib.rs  mock.rs
pallets/pallet-did/: Cargo.toml
pallets/pallet-did-lookup/: Cargo.toml
pallets/pallet-did-lookup/src/: benchmarking.rs  connection_record.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/pallet-did/src/: benchmarking.rs  did_details.rs  lib.rs  migrations.rs  mock.rs  mock_utils.rs  origin.rs  signature.rs
pallets/pallet-did/src/deprecated/: v2.rs
pallets/pallet-inflation/: Cargo.toml
pallets/pallet-inflation/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/pallet-pid-launch/: Cargo.toml
pallets/pallet-pid-launch/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/parachain-staking/: Cargo.toml
pallets/parachain-staking/src/: benchmarking.rs  default_weights.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  types.rs
pallets/pid-launch/: Cargo.toml
pallets/pid-launch/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/common/: Cargo.toml
primitives/common/src/: lib.rs
primitives/src/: benchmarks.rs  constants.rs  fees.rs  lib.rs
runtime/: Cargo.toml
runtime/constants/: Cargo.toml
runtime/constants/src/: lib.rs
runtime/src/: lib.rs
runtime/src/pallets/: aura.rs  balances.rs  grandpa.rs  identity.rs  mod.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs
runtime/src/weights/: mod.rs
runtimes/alfheim/: Cargo.toml
runtimes/alfheim/src/: lib.rs  migrations.rs  tests.rs
runtimes/alfheim/src/weights/: attestation.rs  crowdloan.rs  ctype.rs  delegation.rs  did.rs  frame_system.rs  kilt_launch.rs  mod.rs  pallet_balances.rs  pallet_collective.rs  pallet_democracy.rs  pallet_did_lookup.rs  pallet_indices.rs  pallet_inflation.rs  pallet_membership.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs
runtimes/common/src/: constants.rs  fees.rs
runtimes/midgard/: Cargo.toml  build.rs
runtimes/midgard/src/: lib.rs  migrations.rs  tests.rs
runtimes/midgard/src/pallets/: attestation.rs  aura.rs  authorship.rs  balances.rs  collective.rs  crowdloan.rs  ctype.rs  cumulus_aura_ext.rs  cumulus_parachain_system.rs  delegation.rs  democracy.rs  did.rs  info.rs  (+15 more)
runtimes/peregrine/: Cargo.toml
runtimes/peregrine/src/: lib.rs  migrations.rs
runtimes/spiritnet/: Cargo.toml
runtimes/spiritnet/src/: lib.rs
runtimes/standalone/: Cargo.toml  build.rs
runtimes/standalone/src/: lib.rs
runtimes/standalone/src/pallets/: assets.rs  attestation.rs  aura.rs  authorship.rs  balances.rs  crowdloan.rs  ctype.rs  delegation.rs  did.rs  did_lookup.rs  grandpa.rs  indices.rs  mod.rs  nicks.rs  pid_launch.rs  randomness_collective_flip.rs  session.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs  utility.rs  vesting.rs
runtimes/standalone/src/weights/: frame_system.rs  mod.rs  pallet_collective.rs  pallet_collective_council.rs  pallet_identity.rs  pallet_timestamp.rs  pallet_treasury.rs
scripts/: chain-spec-plain.json  customSpecRaw.json  node01.sh  node02.sh  run_benches_for_pallets.sh  run_benches_for_runtime.sh
support/: Cargo.toml
support/src/: deposit.rs  lib.rs  signature.rs  traits.rs
(+41 files in other folders)
