[package]
authors     = ["ProofId Network <dev@proofid.me>"]
description = "ProofId node runtime common primitives"
edition     = "2021"
homepage    = "https://proofid.me"
license     = "GPL-3.0"
name        = "proofid-common-primitives"
repository  = "https://github.com/proof-id/proofid-node"
version     = "0.0.1"

# paritytech primitives
[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'publish-sp-core-v4.0.0'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'publish-sp-core-v4.0.0'
version = '4.0.0-dev'

[features]
default = ["std"]

std = [
	"sp-core/std",
	"sp-runtime/std",
]
