[package]
authors = ["ProofID <info@proofid.me>"]
edition = "2021"
name = "proofid-node-runtime"
version = "0.0.1"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

[dependencies.hex-literal]
optional = true
version = '0.3.4'

[dependencies.bitflags]
optional = true
default-features = false
version = '1.3.2'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

# proofid functionality
[dependencies.pallet-attestation]
default-features = false
path = "../../pallets/pallet-attestation"

[dependencies.pallet-delegation]
default-features = false
path = "../../pallets/pallet-delegation"

[dependencies.pallet-pid-launch]
default-features = false
path = "../../pallets/pallet-pid-launch"

[dependencies.pallet-ctype]
default-features = false
path = "../../pallets/pallet-ctype"

[dependencies.pallet-did]
default-features = false
path = "../../pallets/pallet-did"

[dependencies.pallet-crowdloan]
default-features = false
path = "../../pallets/pallet-crowdloan"

[dependencies.pallet-did-lookup]
default-features = false
path = "../../pallets/pallet-did-lookup"

[dependencies.pid-primitives]
default-features = false
path = "../../primitives"

[dependencies.pid-support]
default-features = false
optional = true
path = "../../support"
# end proofid functionality

# kilt specific
[dependencies.pallet-vesting]
git = "https://github.com/paritytech/substrate"
default-features = false
branch = "polkadot-v0.9.12"

[dependencies]

# Substrate
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.3.1" }
frame-executive = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-nicks = { branch = "polkadot-v0.9.12", default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-aura = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authorship = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-indices = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-session = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-utility = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-api = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-arithmetic = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate" }

# Benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.12" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.12" }

# Runtime tests
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12", optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "pallet-attestation/runtime-benchmarks",
    "pallet-delegation/runtime-benchmarks",
    "pallet-pid-launch/runtime-benchmarks",
    "pallet-ctype/runtime-benchmarks",
    "pallet-did/runtime-benchmarks",
    "pallet-crowdloan/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-system-benchmarking",
    "pid-primitives/runtime-benchmarks",
    "pid-support",
    "pid-support/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-did-lookup/runtime-benchmarks",
    "pallet-indices/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "pallet-attestation/std",
    "pallet-delegation/std",
    "pallet-pid-launch/std",
    "pallet-crowdloan/std",
    "pallet-ctype/std",
    "pallet-did/std",
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-try-runtime/std",
    "pid-primitives/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-did-lookup/std",
    "pallet-grandpa/std",
    "pallet-indices/std",
    "pallet-randomness-collective-flip/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-vesting/std",
    "scale-info/std",
    "sp-api/std",
    "sp-arithmetic/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
]
try-runtime = [
    "pallet-attestation/try-runtime",
    "pallet-delegation/try-runtime",
    "pallet-pid-launch/try-runtime",
    "pallet-crowdloan/try-runtime",
    "pallet-ctype/try-runtime",
    "pallet-did/try-runtime",
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime",
    "pallet-aura/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-indices/try-runtime",
    "pallet-randomness-collective-flip/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-vesting/try-runtime",
]
